tests/invalid/unicode2.m
:- module unicode2.

:- interface.

:- type '\UFFFFFFFF' == int.
